[NO ISSUE][CONF] Remove redundant --add-opens args
- user model changes: no
- storage format changes: no
- interface changes: no

Details:
Now that the required --add-opens arguments are being
put into the appassembler scripts, having the NCService
add them when starting an NC is redundant at best.

Change-Id: I13ec2c1063754b93d1fad551362134c0d1c593d6
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/21478
Reviewed-by: Ian Maxon <imaxon@apache.org>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>